--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,33 @@ body {
   position: relative;
   width: 260px;
   height: 260px;
+  top: -60px;
+  left: 20px; 
+  /* the left value centers the image in the card */
+  z-index: 1;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
 }
 
 .container .card .imgDiv img {
   max-width: 100%;
+  height: 260px;
+  /* height here matches height of .container .card .imgDiv - needs to match */
+  border-radius: 4px;
+}
+
+.container .card .content {
+  position: relative;
+  margin-top: -140px;
+  padding: 10px 15px;
+  text-align: center;
+  color: #111;
+  visibility: hidden;
+  transition: 0.3s ease-in-out;
+}
+
+.container .card:hover .content {
+  visibility: visible;
+  opacity: 1;
+  margin-top: -40px;
+  transition-delay: 0.3s;
 }
