--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 30px;
+  padding: 10% 30px 0 30px;
 }
 
 .container .card {
@@ -37,7 +37,7 @@ body {
 }
 
 .container .card:hover {
-  height: 400px;
+  height: 420px;
 }
 
 .container .card .imgDiv {
